--- a/deploy/memelordz/Chart.yaml
+++ b/deploy/memelordz/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "1.0"
-description: A Helm chart for Kubernetes
+description: Home for memez
 name: memelordz
 version: 0.1.0
